--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.5.4",
+        "jenssegers/agent": "^2.6",
         "laravel/breeze": "1.10",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
